@startuml
title <size:60> "Data Model"
caption <size:40> "Physical Model for nosql database - Mapped 1 - 1"

package DatabasePersistence #GreenYellow/LightGoldenRodYellow {
Interface IUser{
+UserId id
+UserFirstName firstName,
+UserLastName lastName,
+UserEmail email,
+UserPassword password,
+bool accountActive,
+DateOnly dob,
+Roles role,
}

enum Roles{
VisaApplicant
VisaOfficer
SupportSpecialist
BranchManager
Admin
}

IUser *-- Roles : Has-A

class VisaApplicant <<Entity>>{

}

class VisaOfficer <<Entity>>{
+BranchId id
}

class SupportSpecialist <<Entity>>{
+BranchId id
}

class BranchManager <<Entity>>{
+BranchId id
}

class Admin <<Entity>>{
}

IUser <|-- VisaApplicant : Extends
IUser <|-- VisaOfficer : Extends
IUser <|-- SupportSpecialist : Extends
IUser <|-- BranchManager : Extends
IUser <|-- Admin : Extends


note "Attributes will be their own independant value objects with validation inside" as note_user
note_user --> User: Note for User



class Application {
    userId : Guid
    applicationid : Guid
    visaId:
    personaldetails : PersonalDetails
    traveldetails : TravelDetails
    documentation : Documentation
    biometricidentifcation? : BiometricIdentication
    status : StatusEnum
    biometricRequired : Bool
    biometricCompleted? : Bool
}

class PersonalDetails{
    Questions : List<Question>

    +ValidateAllAnswered: Bool
}

class TravelDetails{
    Questions : List<Question>
    +ValidateAllAnswered: Bool
}

class PassportDetails{
    Questions : List<Question>
    +ValidateAllAnswered: Bool
}

class DocumentationDetails{
    Documentation : List<DocumentationData>
    +ValidateDocumentationIsSubmitted: Bool
}


class BiometricIdentification{

}

class AdditionalInformation {

}

class Question{
    Question : string
    Type : QuestionType
    CheckboxOptions? : list<String>
    SelectOption? : List<string>
    Answer: string
}

class DocumentationData{
    Documnetation : string
    docName: string
    docData: Byte[] 
}

enum QuestionType{
    Field
    CheckBox
    Select
    FileUpload
}

Application "1" *-- "1" PersonalDetails: Has
Application "1" *-- "1" TravelDetails: Has
Application "1" *-- "1" PassportDetails: Has
Application "1" *-- "1" DocumentationDetails: Has
Application "1" *-- "1" BiometricIdentification: May Have (OUT OF SCOPE FOR PROTOTYPE)
Application "1" *-- "1" AdditionalInformation: May Have (OUT OF SCOPE FOR PROTOTYPE)

PersonalDetails "1" *-- "*" Question
TravelDetails "1" *-- "*" Question
PassportDetails "1" *-- "*" Question
DocumentationDetails "1" *-- "*" DocumentationData

Question "1" *-- "1"  QuestionType: Uses 

note "This class will be mapped 1 to 1 to a document for persistence in the database" as note_Application
note_Application --> Application
}

Class Visa {
 visaId : Guid
 visaTitle : String
 visaInfromation : VisaInformation
 visaElgibilityRules : VisaEligibilityRules
 VisaDocumentationRequirements : VisaDocumentationRequirements
 Country: string
 Type: string
 purpose: string
}

Class VisaInformation{
    description : string
}

Class VisaEligibilityRules{
    description : string
}

Class VisaDocumentationRequirements{
    description : string
}


Visa *-- VisaInformation: Contains
Visa *-- VisaEligibilityRules: Contains
Visa *-- VisaDocumentationRequirements: Contains


note "These classes are not intended for database and functions as a model object for representation from the external system" as note_Visas
note_Visas -- Visa
@enduml

note "seperate into package to show that visas are xternal"